--- a/index.html
+++ b/index.html
@@ -321,7 +321,7 @@ https://wa.me/+5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
 <hr class="new1">
 <!---------------------------------------------------------------------------------->
 &emsp;<FONT SIZE=+2>ENVIE O LINK DESSE SITE PARA UM AMIGO VIA <a href="
-https://api.whatsapp.com/send?text=[CONTEÚDO⚫]
+https://api.whatsapp.com/send?text=Esse é o link para o site "MINHA NET"  -   https://jbmsantos0398.github.io/MINHA-NET/
 " target="_blank">
 <FONT COLOR="#20e002"><b>WHATSAPP.</b></FONT>
 </a></FONT>
