--- a/index.html
+++ b/index.html
@@ -296,23 +296,23 @@ function closeNav() {
 <!--##############################################################################-->
 <!---------------------------------------------------------------------------------->
 
-&emsp;<FONT SIZE=+2>CONTÉM CONTEÚDO ADULTO, <FONT COLOR="RED"><b>PROIBIDO PARA MENORES DE 18 ANOS.</b></FONT></FONT>
+&emsp;💥<FONT SIZE=+2>CONTÉM CONTEÚDO ADULTO, <FONT COLOR="RED"><b>PROIBIDO PARA MENORES DE 18 ANOS.</b></FONT></FONT>
 <!---------------------------------------------------------------------------------->
 <hr class="new1">
 <!---------------------------------------------------------------------------------->
-&emsp;<FONT SIZE=+2>ATUALIZADO EM:<BR/> <FONT COLOR="#e09302"><b>
+&emsp;💥<FONT SIZE=+2>ATUALIZADO EM:<BR/> <FONT COLOR="#e09302"><b>
 14:30 08/01/2025
 .</b></FONT></FONT>
 <!---------------------------------------------------------------------------------->
 <hr class="new1">
 <!---------------------------------------------------------------------------------->
-&emsp;<FONT SIZE=+2>CRIADO EM:<BR/> <FONT COLOR="#e09302"><b>
+&emsp;💥<FONT SIZE=+2>CRIADO EM:<BR/> <FONT COLOR="#e09302"><b>
 14:30 08/01/2025
 .</b></FONT></FONT>
 <!---------------------------------------------------------------------------------->
 <hr class="new1">
 <!---------------------------------------------------------------------------------->
-&emsp;<FONT SIZE=+2>FALE COMIGO VIA <a href="
+&emsp;💥<FONT SIZE=+2>FALE COMIGO VIA <a href="
 https://wa.me/+5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
 " target="_blank">
 <FONT COLOR="#20e002"><b>WHATSAPP.</b></FONT>
@@ -320,7 +320,7 @@ https://wa.me/+5585988885153?text=SANTOS%20QUERO%20DIZER%20QUE%20
 <!---------------------------------------------------------------------------------->
 <hr class="new1">
 <!---------------------------------------------------------------------------------->
-&emsp;<FONT SIZE=+2>ENVIE O LINK DESSE SITE PARA UM AMIGO VIA <a href="
+&emsp;💥<FONT SIZE=+2>ENVIE O LINK DESSE SITE PARA UM AMIGO VIA <a href="
 https://api.whatsapp.com/send?text=Esse é o link para o site *MINHA NET*  -   https://jbmsantos0398.github.io/MINHA-NET/
 " target="_blank">
 <FONT COLOR="#20e002"><b>WHATSAPP.</b></FONT>
@@ -332,6 +332,22 @@ https://api.whatsapp.com/send?text=Esse é o link para o site *MINHA NET*  -   h
 
 
 
+&emsp;Download do link do site<a href="
+Downloads 
+" target="_blank">
+clicando aqui
+</a>
+<!---------------------------------------------------------------------------------->
+<hr class="new1">
+<!---------------------------------------------------------------------------------->
+&emsp;<FONT SIZE=+0>Código qr code<a href="
+Qr
+" target="_blank">
+clicando aqui
+</a>
+<!---------------------------------------------------------------------------------->
+<hr class="new1">
+<!---------------------------------------------------------------------------------->
 
 
 
