--- a/index.html
+++ b/index.html
@@ -332,16 +332,16 @@ https://api.whatsapp.com/send?text=Esse é o link para o site *MINHA NET*  -   h
 
 
 
-&emsp;Download do link do site<a href="
-Downloads 
+&emsp;Download do link do site<a href="index_arquivos/Imag/
+Link do site.zip
 " target="_blank">
 clicando aqui
 </a>
 <!---------------------------------------------------------------------------------->
 <hr class="new1">
 <!---------------------------------------------------------------------------------->
-&emsp;<FONT SIZE=+0>Código qr code<a href="
-Qr
+&emsp;<FONT SIZE=+0>Código qr code<a href="index_arquivos/Imag/
+MINHA NET.png
 " target="_blank">
 clicando aqui
 </a>
@@ -375,7 +375,7 @@ clicando aqui
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<center>
+<br/><br/><br/><center>
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!DOCTYPE html><html><head><style>
