Update 1 - Copia.html

--- a/index_arquivos/VÍDEOS/1 - Copia.html
+++ b/index_arquivos/VÍDEOS/1 - Copia.html
@@ -113,11 +113,21 @@ div.scrollmenu a:hover {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <div class="scrollmenu">
-  <a href="RÁDIAS/1 - Copia.html">RÁDIAS</a>
-  <a href="MP3/1 - Copia.html">MP3</a>
-  <a href="COLETANEAS/1 - Copia.html">COLETANEAS</a>
-  <a href="GOOGLE DRIVE/1 - Copia.html">GOOGLE DRIVE</a>
-  <a href="OUTROS/1 - Copia.html">OUTROS</a>
+  <a href="FILMES/1 - Copia.html">FILMES</a>
+  <a href="VÍDEOS/1 - Copia.html">VÍDEOS</a>
+  <a href="DICAS/1 - Copia.html">DICAS</a>
+  <a href="RECEITAS/1 - Copia.html">RECEITAS</a>
+  <a href="ANIMAÇÕES/1 - Copia.html">ANIMAÇÕES</a>
+  <a href="COMÉDIAS/1 - Copia.html">COMÉDIAS</a>
+  <a href="CANAIS/1 - Copia.html">CANAIS</a>
+  <a href="PLAYLISTS/1 - Copia.html">PLAYLISTS</a>
+  <a href="TV/1 - Copia.html">TV</a>
+  <a href="VÍDEOS PORNO/1 - Copia.html">VÍDEOS PORNO</a>
+  <a href="DOCUMENTÁRIOS/1 - Copia.html">DOCUMENTÁRIOS</a>
+  <a href="INTERESSANTES/1 - Copia.html">INTERESSANTES</a>
+  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
+  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
+  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
   <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
 
 
