--- a/index_arquivos/OUTROS/1.html
+++ b/index_arquivos/OUTROS/1.html
@@ -124,7 +124,7 @@ div.scrollmenu a:hover {
   <a href="DOWNLOADS/1 - Copia.html">DOWNLOADS</a>
   <a href="TELEGRAM/1 - Copia.html">TELEGRAM</a>
   <a href="EXEMPLOS HTML/1 - Copia.html">EXEMPLOS HTML</a>
-  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
+  <a href="JOGOS/1 - Copia.html">JOGOS</a>
   <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
   <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
   <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
