--- a/index_arquivos/SOBRE/1 - Copia.html
+++ b/index_arquivos/SOBRE/1 - Copia.html
@@ -113,12 +113,11 @@ div.scrollmenu a:hover {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <div class="scrollmenu">
-  <a href="RÁDIAS/1 - Copia.html">RÁDIAS</a>
-  <a href="MP3/1 - Copia.html">MP3</a>
-  <a href="COLETANEAS/1 - Copia.html">COLETANEAS</a>
-  <a href="GOOGLE DRIVE/1 - Copia.html">GOOGLE DRIVE</a>
+  <a href="SOBRE MIM/1 - Copia.html">SOBRE MIM</a>
+  <a href="SOBRE O SITE/1 - Copia.html">SOBRE O SITE</a>
+  <a href="ADVERTENCIAS/1 - Copia.html">ADVERTENCIAS</a>
+  <a href="NOVIDADES/1 - Copia.html">NOVIDADES</a>
   <a href="OUTROS/1 - Copia.html">OUTROS</a>
-  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
 
 
 
