--- a/index_arquivos/OUTROS/1.html
+++ b/index_arquivos/OUTROS/1.html
@@ -113,7 +113,7 @@ div.scrollmenu a:hover {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <div class="scrollmenu">
-  <a href="EMBUTIDOS/1 - Copia.html">EMBUTIDOS</a>
+  <a href="EMBUTIDOS/1 - Copia.html"><FONT COLOR="#f6ff00"><B>EMBUTIDOS</B></FONT></a>
   <a href="SITES/1 - Copia.html">SITES</a>
   <a href="../MEUS SITES/1 - Copia.html">MEUS SITES</a>
   <a href="SITES PORNO/1 - Copia.html">SITES PORNO</a>
@@ -125,14 +125,15 @@ div.scrollmenu a:hover {
   <a href="TELEGRAM/1 - Copia.html">TELEGRAM</a>
   <a href="EXEMPLOS HTML/1 - Copia.html">EXEMPLOS HTML</a>
   <a href="JOGOS/1 - Copia.html">JOGOS</a>
+  <a href="LEMBRETES/1 - Copia.html">LEMBRETES</a>
+  <a href="LINKS/1 - Copia.html">LINKS</a>
+
+
+<!----------------------------------
   <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
-  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
-  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
-  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
-  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
-  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
-  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
-  <a href="NOME⚫/1 - Copia.html">NOME⚫</a>
+------------------------------->
+
+
 
 
 
