--- a/index_arquivos/OUTROS/0000000000/1.html
+++ b/index_arquivos/OUTROS/0000000000/1.html
@@ -113,11 +113,25 @@ div.scrollmenu a:hover {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <div class="scrollmenu">
-  <a href="../RÁDIAS/1 - Copia.html">RÁDIAS</a>
-  <a href="../MP3/1 - Copia.html">MP3</a>
-  <a href="../COLETANEAS/1 - Copia.html">COLETANEAS</a>
-  <a href="../GOOGLE DRIVE/1 - Copia.html">GOOGLE DRIVE</a>
-  <a href="../OUTROS/1 - Copia.html">OUTROS</a>
+  <a href="../EMBUTIDOS/1 - Copia.html"><FONT COLOR="#f6ff00"><B>EMBUTIDOS</B></FONT></a>
+  <a href="../SITES/1 - Copia.html">SITES</a>
+  <a href="../../MEUS SITES/1 - Copia.html">MEUS SITES</a>
+  <a href="../SITES PORNO/1 - Copia.html">SITES PORNO</a>
+  <a href="../REDES SOCIAIS/1 - Copia.html">REDES SOCIAIS</a>
+  <a href="../TEMAS E EXTENSÕES/1 - Copia.html">TEMAS E EXTENSÕES</a>
+  <a href="../APK E PROGRAMAS/1 - Copia.html">APK E PROGRAMAS</a>
+  <a href="../MAPAS E LUGARES/1 - Copia.html">MAPAS E LUGARES</a>
+  <a href="../DOWNLOADS/1 - Copia.html">DOWNLOADS</a>
+  <a href="../TELEGRAM/1 - Copia.html">TELEGRAM</a>
+  <a href="../EXEMPLOS HTML/1 - Copia.html">EXEMPLOS HTML</a>
+  <a href="../JOGOS/1 - Copia.html">JOGOS</a>
+  <a href="../LEMBRETES/1 - Copia.html">LEMBRETES</a>
+  <a href="../LINKS/1 - Copia.html">LINKS</a>
+
+
+<!----------------------------------
+  <a href="../NOME⚫/1 - Copia.html">NOME⚫</a>
+------------------------------->
 
 
 
