Update 1 - Copia.html

--- a/index_arquivos/OUTROS/EMBUTIDOS/1 - Copia.html
+++ b/index_arquivos/OUTROS/EMBUTIDOS/1 - Copia.html
@@ -357,9 +357,9 @@ function closeNav() {
 <!------------------------_blank --- _self ------------------------->
 <!-------------------------------------------------------------->
 <li><a href="
-LINK🔴
+SANTOS SIMPRES/index.html
 " target="_blank">📂
-NOME🔴
+SANTOS SIMPRES
 </a></li>
 <!-------------------------------------------------------------->
 <li><a href="
