Update 1 - Copia.html

--- a/index_arquivos/OUTROS/EMBUTIDOS/1 - Copia.html
+++ b/index_arquivos/OUTROS/EMBUTIDOS/1 - Copia.html
@@ -343,9 +343,13 @@ function closeNav() {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!------------------------_blank --- _self ------------------------->
-<!-------------------------------------------------------------->
+<!-----------------------------------
   <li><a href="#">Adele</a></li>
-<!-------------------------------------------------------------->
+<!-----------------------------------
+  <li><a href="#">Agnes</a></li>
+<!-----------------------------------
+  <li><a href="#">Adele</a></li>
+<!-----------------------------------
   <li><a href="#">Agnes</a></li>
 <!-------------------------------------------------------------->
 
@@ -368,6 +372,76 @@ LINK🔴
 NOME🔴
 </a></li>
 <!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+
+
+
+
+
+
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
