Update 1 - Copia.html

--- a/index_arquivos/MEUS SITES/1 - Copia.html
+++ b/index_arquivos/MEUS SITES/1 - Copia.html
@@ -111,7 +111,7 @@ div.scrollmenu a:hover {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
-<!---------------------------------------------------------------------------------->
+<!-----------------------------------------
 <div class="scrollmenu">
   <a href="RÁDIAS/1 - Copia.html">RÁDIAS</a>
   <a href="MP3/1 - Copia.html">MP3</a>
@@ -328,9 +328,9 @@ function closeNav() {
 <!---------------------------------------------------------------------------------->
 <!---------------------------------------------------------------------------------->
 <!------------------------_blank --- _self ------------------------->
-<!-------------------------------------------------------------->
+<!---------------------------------
   <li><a href="#">Adele</a></li>
-<!-------------------------------------------------------------->
+<!----------------------------------
   <li><a href="#">Agnes</a></li>
 <!-------------------------------------------------------------->
 
@@ -342,6 +342,24 @@ function closeNav() {
 <!------------------------_blank --- _self ------------------------->
 <!-------------------------------------------------------------->
 <li><a href="
+https://jbmsantos0398.github.io/MINHA-NET/
+" target="_blank">📂
+MINHA NET
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+https://jbmsantos0398.github.io/SANTOS/
+" target="_blank">📂
+SANTOS
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+https://jbmsantos0398.github.io/TUDOEM1/
+" target="_blank">📂
+TUDOEM1
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
 LINK🔴
 " target="_blank">📂
 NOME🔴
@@ -353,6 +371,60 @@ LINK🔴
 NOME🔴
 </a></li>
 <!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+
+
+
+
+
+
+
+
+
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+<li><a href="
+LINK🔴
+" target="_blank">📂
+NOME🔴
+</a></li>
+<!-------------------------------------------------------------->
+
+
+
 
 
 
