Update 1 - Copia.html

--- a/index_arquivos/OUTROS/EMBUTIDOS/1 - Copia.html
+++ b/index_arquivos/OUTROS/EMBUTIDOS/1 - Copia.html
@@ -361,7 +361,7 @@ function closeNav() {
 <!------------------------_blank --- _self ------------------------->
 <!-------------------------------------------------------------->
 <li><a href="
-SANTOS SIMPRES/index.html
+SANTOS SIMPLES/index.html
 " target="_blank">📂
 SANTOS SIMPRES
 </a></li>
